lab1/Test/L1-A-10-9.output
Error Type B at Line 16
Error Type A at Line 20
Error Type A at Line 23
Error Type A at Line 36
Error Type B at Line 40
Error Type A at Line 53
