lab1/Test/L1-A-10-9.cmm
int ;
int DOUxgtEpyh1t , FWfl8 

;
struct gaYCJi240J9 _huxuMEjZGxFiY2x ( struct iX {
  float dTNCyqYjCNUhK7 [ 1126556368 ] = ZWn1MQ7o4GNWpoxpvp3 
    ;
}K1kX6Sez7Upq76r ) {
  if ( bSOVw )   vIagD1ThIIKWM6FFZ && G_3SXT8waQ4796lbW 
    > jQjmf7do7nl - gBJwT7mv3HmGA * - Sy ( iGoFJ = Ri76o0 
    || szPckCKA51dBTrhANOy < uDLOkH009TjFQx1bNr + wIyJyMiE8p 
    / _Lln7nq0ONHyj [ VYXATbhmkuB5XCj <= LZ / ( ! ( Bwko_kYotWy 
    || mafH8z8dfu_Kl8WF == cNzzdmjg9K2zS / ( wvlBcaqVHMrm2yZ2zZ 
    * - OkcpjpLwXOOYjbAIO ( ojx , Dt0CFll_OzwZaff1aGZ2 
    ) ) ) / 659772724.694987392 ) != ! XpqVOuPUXq . wP7SgR_Zi 
    + ! _3q6DF9HGMcurA ( ) 475050544 ] >= ! 51315211 ) 
    ;

}
int $;
int ;
int JaPTb3BH_f3 ( ) {
`{
    int FsUCU4k_cz2G ;
    struct {
    }HXRTDBqAjwa0eC2vir , Pd2 ;
    while ( w7lL9f6sasszyV )     if ( ir1rZCGkmh5Oz3GSJHBE 
      )     wPlEvEQ8brnmffvsv ;
else     VTxL56s8dhRxDc5Ko ;


  }  return S1c76n8Pg9nwlf ;
}
int CQ5f5PJe_g1AWtG_ ( int iMWI , int ggagV ) {
}
\int ;
int HzyzVMtfL5 ( ) {
}
int fQYZbx1SGuYw0 ( ) {
  i ;, 
  while ( LdoErLsR_LqMe )   if ( um3jkrtIx9Qm ) {
    if ( JKrOTbKDO8KuxVzinY )     rH5ZCEnWZ584CVM 
      ;
else     if ( KSymTawqn9g )     jgn2Pe8yk9j6l ;


  }else   bT2FRtQIDb ;


{
  }}
int ;
int N &( ) {
}
